Added Index file

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <body>
         <header class="mainheader">
             <nav>
-                <a href="home.html">HOME</a><a href="#" class="head1">BLOG</a>
+                <a href="index.html">HOME</a><a href="#" class="head1">BLOG</a>
             </nav>
         </header>
         <main class="blog-main">
